fixed conf/sponsor text alignment

--- a/app/assets/stylesheets/podcast.css.scss
+++ b/app/assets/stylesheets/podcast.css.scss
@@ -20,7 +20,7 @@
   margin-bottom: 3em;
 }
 
-#sponsor {
+#podcast #sponsor {
   text-align: right;
   margin-bottom: 3em;
 
